--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <div class="container">
-        <table class="table">
-            <thead>
+        <table class="table  table-bordered ">
+            <thead class="thead-dark">
                 <tr>
                     <th scope="col">Sno</th>
                     <th scope="col">Chapter Name</th>
@@ -23,6 +23,7 @@
             </thead>
             <tbody>
                 <tr>
+                <tr>
                     <th scope="row" rowspan="3">1</th>
                     <td rowspan="3">Food:Where Does it Come From</td>
                     <td>1.1 Food : Where Does It Come From - Explanation</td>
@@ -32,12 +33,56 @@
                 <tr>
                     <td>1.2 Food : Where Does It Come From - Frequently Asked Questions</td>
                     <td>5:20</td>
-                    <td><a href="https://www.youtube.com/watch?v=Mhat-F6GUiY">Link</a></td>
+                    <td><a href="https://youtu.be/KrU4C3vVNxM">Link</a></td>
                 </tr>
                 <tr>
                     <td>1.3 Full Chapter Explanation & Exercise</td>
                     <td>15:38</td>
                     <td><a href="https://youtu.be/5tdqsng76Fo">Link</a></td>
+                </tr>
+                </tr>
+                <tr>
+                <tr>
+                    <th scope="row" rowspan="5">2</th>
+                    <td rowspan="5">Chapter 2 - Components of Food</td>
+                    <td>2.1 Components of Food - Explanation</td>
+                    <td>11:43</td>
+                    <td><a href="https://youtu.be/_BY2BmMYsmE">Link</a></td>
+                </tr>
+                <tr>
+                    <td>2.2 What Do Various Nutrients Do for Our Body</td>
+                    <td>7:06</td>
+                    <td><a href="https://youtu.be/BXwJ1ACPPk8">Link</a></td>
+                </tr>
+                <tr>
+                    <td>2.3 Loss of Nutrients and Balanced Diet</td>
+                    <td>10:10</td>
+                    <td><a href="https://youtu.be/HJlWxUZ4QWU">Link</a></td>
+                </tr>
+                <tr>
+                    <td>2.4 Components of Food - Frequently Asked Questions</td>
+                    <td>7:35</td>
+                    <td><a href="https://youtu.be/S6xeZKjYWBs">Link</a></td>
+                </tr>
+                <tr>
+                    <td>2.5 Full Chapter Explanation & Exercise</td>
+                    <td>36:33</td>
+                    <td><a href="https://youtu.be/bblkgyxjs_A">Link</a></td>
+                </tr>
+                </tr>
+                <tr>
+                <tr>
+                    <th scope="row" rowspan="4">2</th>
+                    <td rowspan="4">Chapter 3 - Fibre to Fabric --> Dropped for Rationalised Content</td>
+                    <td>2.1 Components of Food - Explanation</td>
+                    <td>11:43</td>
+                    <td><a href="https://youtu.be/_BY2BmMYsmE">Link</a></td>
+                </tr>
+                <tr>
+                    <td>2.2 What Do Various Nutrients Do for Our Body</td>
+                    <td>7:06</td>
+                    <td><a href="https://youtu.be/BXwJ1ACPPk8">Link</a></td>
+                </tr>
                 </tr>
 
             </tbody>
